--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 .contenedor {
-    background-color: aqua;
+    background-color: purple;
     width: 100vw;
     height: 100vh;
     text-align: center;
