--- a/index.css
+++ b/index.css
@@ -1,24 +1,52 @@
 *{
     margin: 0;
 }
+
 .contenedor {
     background-color: #CCFFFF;
     width: 100vw;
     height: 100vh;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   justify-content: center;
 }
 p {
-    font-size: xx-large;
-    padding:10%;
+    font-family:'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-size: 4rem;
+    padding: 2px ;
+   /*background-image: linear-gradient(to right, purple, violet);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;*/
 }
+#cora{
+    margin-top: 5px;
+    margin-bottom: 15px;
+    width: 300px;
+    height: 200px;
+}
+
 button{
-    font-size: xx-large;
-    padding:0.50em;
+    margin-top: 50px;
+    width: 100px;
+    height: 50px;
+    font-size: 1.6rem;
 }
 #yesbtn {
     transform: translate(-100%,0);
+    display: inline-block;
+    background-color: #eee5f9;
+    text-decoration: none;
+}
+#yesbtn:hover {
+    background-color: #d3afff;
 }
 #nobtn {
+    background-color: #eee5f9;
     position: absolute;
-
+    transform: translate(100%, 300%);
 }
+
