--- a/index.css
+++ b/index.css
@@ -23,30 +23,35 @@ p {
     color: transparent;*/
 }
 #cora{
-    margin-top: 5px;
-    margin-bottom: 15px;
+    margin-top: 50px;
+    margin-bottom: 10px;
     width: 300px;
     height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: static;
 }
 
 button{
-    margin-top: 50px;
+    margin-top: 100px;
     width: 100px;
     height: 50px;
     font-size: 1.6rem;
+    align-items: center;
 }
+
 #yesbtn {
     transform: translate(-100%,0);
     display: inline-block;
-    background-color: #eee5f9;
+    background-color: #fbaeed;
     text-decoration: none;
 }
 #yesbtn:hover {
-    background-color: #d3afff;
+    background-color: #ceabf9;
 }
 #nobtn {
-    background-color: #eee5f9;
+    background-color: #fbaeed;
     position: absolute;
-    transform: translate(100%, 300%);
+    transform: translate(100%, 403.5%);
 }
-
